fixing epigram line height and discourse width and margin notes on mobile

--- a/dev/atl-output/app/assets/scss/_xml6.scss
+++ b/dev/atl-output/app/assets/scss/_xml6.scss
@@ -2041,6 +2041,20 @@ main.emblem-page.frontmatter {
 				margin-bottom: -1.5rem;
 			}
 		}
+		.panel--right section.section__epigram .translation, 
+		.panel--right section.section__epigram .original {
+			h3 {
+				grid-column: 1 / 13;
+			}
+			.verse-epigram {
+				grid-column: 1 / 13;
+				line-height: 2;
+			}
+			.verse-epigram > span {
+				line-height: 1.2;
+				margin-bottom: .5rem;
+			}
+		}
 		section.section__discourse .translation, 
 		section.section__discourse .original {
 			._discourse--english, ._discourse--latin {
@@ -2060,9 +2074,21 @@ main.emblem-page.frontmatter {
 				grid-column: 1 / 13;
 				padding: 0 .25rem;
 			}
-			span.note-mark, 
 			div.margin-note {
 				display: none;
+			}
+		}
+		.panel--right section.section__discourse {
+			div.discourse {
+				padding: 0;
+			}
+			.discourse-p1, 
+			.discourse-pagebreak, 
+			.discourse-p2 {
+				grid-column: 1 / 13;
+			}
+			._discourse--english .ab, {
+				padding: 0;
 			}
 		}
 		.subnav-v3 form {
@@ -2109,6 +2135,59 @@ main.emblem-page.frontmatter {
 		section.section__preface ._preface--english div.preface {
 			grid-column: 1 / 10;
 		}
+	}
+	main.emblem-page {
+		.panel--right section.section__discourse {
+			.discourse-p1, 
+			.discourse-pagebreak, 
+			.discourse-p2 {
+				grid-column: 1 / 13;
+			}
+			div.margin-note {
+				display: inline-block;
+				left: 80vw;
+				line-height: 1;
+				width: 19vw;
+			}
+		}
+	}
+	main.emblem-page[data-id='5'] {
+		.discourse-p2 div.ab div.ab > div:nth-of-type(7) {
+			margin-top: .75rem;	
+		}
+	}
+	/* emblems with margin notes */
+	main.emblem-page[data-id='5'], 
+	main.emblem-page[data-id='7'], 
+	main.emblem-page[data-id='8'], 
+	main.emblem-page[data-id='9'], 
+	main.emblem-page[data-id='10'], 
+	main.emblem-page[data-id='13'], 
+	main.emblem-page[data-id='14'], 
+	main.emblem-page[data-id='15'], 
+	main.emblem-page[data-id='17'], 
+	main.emblem-page[data-id='23'], 
+	main.emblem-page[data-id='28'], 
+	main.emblem-page[data-id='30'], 
+	main.emblem-page[data-id='36'], 
+	main.emblem-page[data-id='43'], 
+	main.emblem-page[data-id='49'], 
+	main.emblem-page[data-id='53'] {
+		.panel--right section.section__discourse {
+			.discourse-p1, 
+			.discourse-pagebreak, 
+			.discourse-p2 {
+				grid-column: 1 / 10;
+			}
+		}
+		/* section.section__discourse, 
+		section.section__preface {
+			.edition--facsimile .discourse-p1, 
+			.edition--facsimile .discourse-pagebreak, 
+			.edition--facsimile .discourse-p2 {
+				margin-right: -4rem;
+			}
+		} */
 	}
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
